// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Error Page > should render 401 page when 401 status is passde 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex h-screen w-full flex-col items-center justify-center gap-5 bg-color_1 text-white"
      >
        <div
          class="mx-14 flex flex-col items-center justify-center gap-3"
        >
          <h1
            class="text-9xl font-bold"
          >
            401
          </h1>
          <div
            class="text-center"
          >
            <p
              class="text-3xl text-slate-100"
            >
              Unauthorized
            </p>
            <p>
              You are not authorized to view this page.
            </p>
          </div>
          <button
            class="w-full border-2 border-white bg-color_3 p-3 text-2xl uppercase"
          >
            Homepage
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex h-screen w-full flex-col items-center justify-center gap-5 bg-color_1 text-white"
    >
      <div
        class="mx-14 flex flex-col items-center justify-center gap-3"
      >
        <h1
          class="text-9xl font-bold"
        >
          401
        </h1>
        <div
          class="text-center"
        >
          <p
            class="text-3xl text-slate-100"
          >
            Unauthorized
          </p>
          <p>
            You are not authorized to view this page.
          </p>
        </div>
        <button
          class="w-full border-2 border-white bg-color_3 p-3 text-2xl uppercase"
        >
          Homepage
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Error Page > should render 401 page when 401 status is passed 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex h-screen w-full flex-col items-center justify-center gap-5 bg-color_1 text-white"
      >
        <div
          class="mx-14 flex flex-col items-center justify-center gap-3"
        >
          <h1
            class="text-9xl font-bold"
          >
            401
          </h1>
          <div
            class="text-center"
          >
            <p
              class="text-3xl text-slate-100"
            >
              Unauthorized
            </p>
            <p>
              You are not authorized to view this page.
            </p>
          </div>
          <button
            class="w-full border-2 border-white bg-color_3 p-3 text-2xl uppercase"
          >
            Homepage
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex h-screen w-full flex-col items-center justify-center gap-5 bg-color_1 text-white"
    >
      <div
        class="mx-14 flex flex-col items-center justify-center gap-3"
      >
        <h1
          class="text-9xl font-bold"
        >
          401
        </h1>
        <div
          class="text-center"
        >
          <p
            class="text-3xl text-slate-100"
          >
            Unauthorized
          </p>
          <p>
            You are not authorized to view this page.
          </p>
        </div>
        <button
          class="w-full border-2 border-white bg-color_3 p-3 text-2xl uppercase"
        >
          Homepage
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Error Page > should render 404 page by default 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex h-screen w-full flex-col items-center justify-center gap-5 bg-color_1 text-white"
      >
        <div
          class="mx-14 flex flex-col items-center justify-center gap-3"
        >
          <h1
            class="text-9xl font-bold"
          >
            404
          </h1>
          <div
            class="text-center"
          >
            <p
              class="text-3xl text-slate-100"
            >
              Page Not Found
            </p>
            <p>
              The page that you are searching does not exist.
            </p>
          </div>
          <button
            class="w-full border-2 border-white bg-color_3 p-3 text-2xl uppercase"
          >
            Homepage
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex h-screen w-full flex-col items-center justify-center gap-5 bg-color_1 text-white"
    >
      <div
        class="mx-14 flex flex-col items-center justify-center gap-3"
      >
        <h1
          class="text-9xl font-bold"
        >
          404
        </h1>
        <div
          class="text-center"
        >
          <p
            class="text-3xl text-slate-100"
          >
            Page Not Found
          </p>
          <p>
            The page that you are searching does not exist.
          </p>
        </div>
        <button
          class="w-full border-2 border-white bg-color_3 p-3 text-2xl uppercase"
        >
          Homepage
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Error Page > should render 404 page when 401 status is passde 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex h-screen w-full flex-col items-center justify-center gap-5 bg-color_1 text-white"
      >
        <div
          class="mx-14 flex flex-col items-center justify-center gap-3"
        >
          <h1
            class="text-9xl font-bold"
          >
            404
          </h1>
          <div
            class="text-center"
          >
            <p
              class="text-3xl text-slate-100"
            >
              Page Not Found
            </p>
            <p>
              The page that you are searching does not exist.
            </p>
          </div>
          <button
            class="w-full border-2 border-white bg-color_3 p-3 text-2xl uppercase"
          >
            Homepage
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex h-screen w-full flex-col items-center justify-center gap-5 bg-color_1 text-white"
    >
      <div
        class="mx-14 flex flex-col items-center justify-center gap-3"
      >
        <h1
          class="text-9xl font-bold"
        >
          404
        </h1>
        <div
          class="text-center"
        >
          <p
            class="text-3xl text-slate-100"
          >
            Page Not Found
          </p>
          <p>
            The page that you are searching does not exist.
          </p>
        </div>
        <button
          class="w-full border-2 border-white bg-color_3 p-3 text-2xl uppercase"
        >
          Homepage
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Error Page > should render 404 page when 404 status is passed 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex h-screen w-full flex-col items-center justify-center gap-5 bg-color_1 text-white"
      >
        <div
          class="mx-14 flex flex-col items-center justify-center gap-3"
        >
          <h1
            class="text-9xl font-bold"
          >
            404
          </h1>
          <div
            class="text-center"
          >
            <p
              class="text-3xl text-slate-100"
            >
              Page Not Found
            </p>
            <p>
              The page that you are searching does not exist.
            </p>
          </div>
          <button
            class="w-full border-2 border-white bg-color_3 p-3 text-2xl uppercase"
          >
            Homepage
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex h-screen w-full flex-col items-center justify-center gap-5 bg-color_1 text-white"
    >
      <div
        class="mx-14 flex flex-col items-center justify-center gap-3"
      >
        <h1
          class="text-9xl font-bold"
        >
          404
        </h1>
        <div
          class="text-center"
        >
          <p
            class="text-3xl text-slate-100"
          >
            Page Not Found
          </p>
          <p>
            The page that you are searching does not exist.
          </p>
        </div>
        <button
          class="w-full border-2 border-white bg-color_3 p-3 text-2xl uppercase"
        >
          Homepage
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Error Page > should render 500 page when 500 status is passde 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex h-screen w-full flex-col items-center justify-center gap-5 bg-color_1 text-white"
      >
        <div
          class="mx-14 flex flex-col items-center justify-center gap-3"
        >
          <h1
            class="text-9xl font-bold"
          >
            500
          </h1>
          <div
            class="text-center"
          >
            <p
              class="text-3xl text-slate-100"
            >
              Internal Server Error
            </p>
            <p>
              There was an internal server error. Please try again later.
            </p>
          </div>
          <button
            class="w-full border-2 border-white bg-color_3 p-3 text-2xl uppercase"
          >
            Homepage
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex h-screen w-full flex-col items-center justify-center gap-5 bg-color_1 text-white"
    >
      <div
        class="mx-14 flex flex-col items-center justify-center gap-3"
      >
        <h1
          class="text-9xl font-bold"
        >
          500
        </h1>
        <div
          class="text-center"
        >
          <p
            class="text-3xl text-slate-100"
          >
            Internal Server Error
          </p>
          <p>
            There was an internal server error. Please try again later.
          </p>
        </div>
        <button
          class="w-full border-2 border-white bg-color_3 p-3 text-2xl uppercase"
        >
          Homepage
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Error Page > should render 500 page when 500 status is passed 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex h-screen w-full flex-col items-center justify-center gap-5 bg-color_1 text-white"
      >
        <div
          class="mx-14 flex flex-col items-center justify-center gap-3"
        >
          <h1
            class="text-9xl font-bold"
          >
            500
          </h1>
          <div
            class="text-center"
          >
            <p
              class="text-3xl text-slate-100"
            >
              Internal Server Error
            </p>
            <p>
              There was an internal server error. Please try again later.
            </p>
          </div>
          <button
            class="w-full border-2 border-white bg-color_3 p-3 text-2xl uppercase"
          >
            Homepage
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex h-screen w-full flex-col items-center justify-center gap-5 bg-color_1 text-white"
    >
      <div
        class="mx-14 flex flex-col items-center justify-center gap-3"
      >
        <h1
          class="text-9xl font-bold"
        >
          500
        </h1>
        <div
          class="text-center"
        >
          <p
            class="text-3xl text-slate-100"
          >
            Internal Server Error
          </p>
          <p>
            There was an internal server error. Please try again later.
          </p>
        </div>
        <button
          class="w-full border-2 border-white bg-color_3 p-3 text-2xl uppercase"
        >
          Homepage
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
